Update koningschieten uitslagen
Use markdown for koningschieten uitslagen tables.
Standardise uitslag ordering: bow > gender > age > score.
Increase body font size.
Modify link colours.
Remove unused class.
Fix some typos/capitalisation.

--- a/pages/activiteiten/koningschieten.html
+++ b/pages/activiteiten/koningschieten.html
@@ -3,7 +3,7 @@
 {% block body %}
     <h2>Koningschieten</h2>
 
-    <p class='textw'>
+    <p class='textwidth'>
         Het Koningschieten is de wedstrijd van het jaar. De clubleden
         strijden dan tegen elkaar. Er wordt geschoten in de klasses
         traditioneel (30 en 20 meter), recurve en compound (50 en 30
@@ -11,7 +11,7 @@
         vrouwen.
     </p>
 
-    <p class='textw'>
+    <p class='textwidth'>
         De winnaar van een klasse krijgt de titel koning of koningin.
         Indien iemand voor het derde jaar achtereen koning of koningin
         is geworden, dan krijgt hij of zij de titel keizer of keizerin,
