--- a/pages/activiteiten/koningschieten/2006.html
+++ b/pages/activiteiten/koningschieten/2006.html
@@ -4,85 +4,70 @@
 {% block title %}{{ block.super }} : 2006{% endblock %}
 
 {% block body %}
-    <h2>Koningschieten 2006</h2>
 
-    <p>
-        De wedstrijd vond plaats op 10 September, en begon om 13.00 (op
-        het buitenveld).<br>
-        De jeugd schoot op 30 en 20 meter, en de volwassenen op 50 en 30
-        meter, en 36 pijlen per afstand.
-    </p>
+{% filter markdown:'tables,markdown-in-html' %}
 
-    <h3>Uitslag</h3>
-    <table><tr><td width="250" valign="top">
-        <h5>Jeugd</h5>
-        <p>
-            Recurve:<br>
-            Jongens:
-        </p>
-        <table width="210">
-            <tr><th width="40">Naam</th><th width="40">Score</th></tr>
-            <tr><td>Pepijn</td><td></td></tr>
-        </table>
+## Koningschieten 2006
 
-        <p>
-            Meiden:
-        </p>
-        <table width="210">
-            <tr><th width="40">Naam</th><th width="40">Score</th></tr>
-            <tr><td>Anna</td><td></td></tr>
-        </table>
+De wedstrijd vond plaats op 10 september, en begon om 13.00 (op
+het buitenveld).<br>
+De jeugd schoot op 30 en 20 meter, en de volwassenen op 50 en 30
+meter, en 36 pijlen per afstand.
 
-        <p>
-            Compound:<br>
-            Jongens:
-        </p>
-        <table width="210">
-            <tr><th width="40">Naam</th><th width="40">Score</th></tr>
-            <tr><td>Martyn den Besten</td><td></td></tr>
-        </table>
-    </td>
-    <td valign="top">
-        <h5>Volwassenen</h5>
+### Uitslagen
 
-        <p>
-            Recurve:<br>
-            Heren:
-        </p>
-        <table width="210">
-            <tr><th width="40">Naam</th><th width="40">Score</th></tr>
-            <tr><td>Maarten de Jong</td><td></td></tr>
-            <tr><td>Marcel van Baalen</td><td></td></tr>
-            <tr><td>Arne de Laat</td><td></td></tr>
-        </table>
+<div markdown='1' class='table-left'>
+### Recurve
 
-        <p>
-            Dames:
-        </p>
-        <table width="210">
-            <tr><th width="40">Naam</th><th width="40">Score</th></tr>
-            <tr><td></td><td></td></tr></table>
+#### Heren
 
-        <p>
-            Compound:<br>
-            Heren:
-        </p>
-        <table width="210">
-            <tr><th width="40">Naam</th><th width="40">Score</th></tr>
-            <tr><td>Sander de Vries (1)</td><td></td></tr>
-            <tr><td>Peter de Wilde</td><td></td></tr>
-            <tr><td>Peter de Jong</td><td></td></tr>
-        </table>
+| Naam                   | Score |
+|------------------------|------:|
+| Maarten de Jong        |       |
+| Marcel van Baalen      |       |
+| Arne de Laat           |       |
 
-        <p>
-            Dames:
-        </p>
-        <table width="210">
-            <tr><th width="40">Naam</th><th width="40">Score</th></tr>
-            <tr><td>Françoise Weijters (1)</td><td></td></tr>
-        </table>
-    </td></tr></table>
-    <p>
-        (1) buiten mededinging, is al keijzer(in)
-    </p>
+#### Heren jeugd
+
+| Naam                   | Score |
+|------------------------|------:|
+| Pepijn Melse           |       |
+
+#### Dames jeugd
+
+| Naam                   | Score |
+|------------------------|------:|
+| Anna Melse             |       |
+</div>
+
+<div markdown='1' class='table-left'>
+### Compound
+
+#### Heren
+
+| Naam                   | Score |
+|------------------------|------:|
+| Sander de Vries (1)    |       |
+| Peter de Wilde         |       |
+| Peter de Jong          |       |
+
+#### Dames
+
+| Naam                   | Score |
+|------------------------|------:|
+| Françoise Weijters (1) |       |
+
+#### Heren jeugd
+
+| Naam                   | Score |
+|------------------------|------:|
+| Martyn den Besten      |       |
+</div>
+
+<div class='clearer'></div>
+
+(1) buiten mededinging, is al keijzer(in)
+
+{% endfilter %}
+
 {% endblock %}
