--- a/pages/activiteiten/paasverschieting.html
+++ b/pages/activiteiten/paasverschieting.html
@@ -6,7 +6,7 @@
 {% block body %}
     <h2>Paasverschieting</h2>
 
-    <p class="textw">
+    <p class="textwidth">
         Op zondag 24 april was het eerste paasdag, een mooie dag voor
         een paasverschieting! En niet zomaar een verschieting, dit keer
         werd er geschoten met zelf gemaakte bogen. Een aantal mensen had
@@ -14,7 +14,7 @@
         vliegermateriaal, pluche, en zelfs van papier-mache...
     </p>
 
-    <p class="textw">
+    <p class="textwidth">
         Sommige bogen bleken wat steviger dan andere, en twee bogen
         hebben het einde van de wedstrijd helaas niet gehaald. De houten
         boog van Maarten begaf het al na enkele schoten, hij ging daarom
