--- a/pages/activiteiten/sinterkerstnieuwjaarsverschieting.html
+++ b/pages/activiteiten/sinterkerstnieuwjaarsverschieting.html
@@ -6,7 +6,7 @@
 {% block body %}
     <h2>SinterKerstNieuwjaarsverschieting</h2>
 
-    <p class="textw">
+    <p class="textwidth">
         Op 9 januari was de grote SinterKerstNieuwjaarsverschieting bij
         Geronimo. Om half vier stond een grote groep schutters (bijna 20
         man) vol spanning aan de schietlijn te wachten op het startschot
@@ -17,7 +17,7 @@
         geel, als je die raakte was je al je punten weer kwijt...
     </p>
 
-    <p class="textw">
+    <p class="textwidth">
         Na een spannende strijd werden aan het eind van de middag de 3
         beste schutters bekend gemaakt. Op de derde plaats eindigde
         Jelle, die er met een prachtige Italiaanse designklok vandoor
