--- a/pages/beginnerscursus.html
+++ b/pages/beginnerscursus.html
@@ -9,7 +9,7 @@
 {% block body %}
 <h2>Beginnerscursussen</h2>
 
-<p class="textw">
+<p class="textwidth">
     Geronimo verwelkomt graag aspirant leden. Bent u geïnteresseerd, dan
     kunt u één van onze cursussen volgen.<br>
     Na de cursus kunt u <a href="lidmaatschap.html">lid</a> worden om
@@ -21,7 +21,7 @@
 
 <h3>Cursus 1. Recurve schieten</h3>
 
-<p class="textw">
+<p class="textwidth">
     Deze bestaat uit 10 lessen van een uur en wordt twee keer per jaar
     georganiseerd, voor en najaar. De groep bestaat uit maximaal 8
     cursisten. Voor de cursus hoeft u zelf geen materiaal te hebben,
@@ -52,7 +52,7 @@
 
 <h4>Wanneer?</h4>
 
-<p class="textw">
+<p class="textwidth">
     Er zijn twee beginnerscursussen per jaar;
 </p>
 
@@ -61,7 +61,7 @@
     <li>De ander op de 3e vrijdag van januari</li>
 </ul>
 
-<p class="textw">
+<p class="textwidth">
     Voor elke cursus is er ruimte voor 8 schutters, de selectie
     gebeurt op volgorde van aanmelding.<br>
     Er is geen mogelijkheid voor privé lessen.
@@ -70,7 +70,7 @@
 
 <h4>Les schema</h4>
 
-<p class="textw">
+<p class="textwidth">
     De 10 lessen worden gegeven op de vrijdag (elke week, voor 10 weken) van
     19.30 tot 20.30 uur.<br>
     De lessen beginnen om 19:30, graag willen we dan beginnen met de les,
@@ -81,7 +81,7 @@
 
 <h3>Cursus 2. Traditioneel schieten</h3>
 
-<p class="textw">
+<p class="textwidth">
     De cursus Traditioneel schieten (met houten boog zonder richtmiddelen)
     bestaat uit 5 lessen van een uur en wordt één keer per jaar
     georganiseerd en wel in <b>juni</b>. De groep bestaat uit maximaal 5
@@ -108,7 +108,7 @@
     </tr>
 </table>
 
-<p class="textw">
+<p class="textwidth">
     Ook voor deze cursus hoeft u niets mee te nemen.<br>
     Wilt u na deze cursus toch recurve gaan schieten dan kunt u 5 extra
     lessen recurve volgen.
@@ -118,7 +118,7 @@
 
 <h3>Aanmelden?</h3>
 
-<p class="textw">
+<p class="textwidth">
     U kunt zich aanmelden via
     <a href="{% url '/aanmelden.html' %}"><b>dit formulier</b></a> op de
     website. Daar moet u onder andere uw naam, adres, telefoonnummer en
