--- a/pages/geronimo.html
+++ b/pages/geronimo.html
@@ -8,7 +8,7 @@
 
     <h4>Handboogvereniging Geronimo</h4>
 
-    <p class="textw">
+    <p class="textwidth">
         De Seijster Handboog Schutterij Geronimo is in 1981 in Zeist
         (regio Utrecht) opgericht. Diverse schutters van Geronimo zijn
         regelmatig te vinden op nationale en internationale wedstrijden.
@@ -19,7 +19,7 @@
 
     <h4>Voor wie geschikt?</h4>
 
-    <p class="textw">
+    <p class="textwidth">
         De handboogsport is bij uitstek geschikt voor iedereen, van jong
         tot oud, voor validen en minder validen. Handboogschieten is een
         technische sport waarbij concentratie belangrijk is. Het is een
@@ -32,7 +32,7 @@
 
     <h4>Soorten bogen</h4>
 
-    <p class="textw">
+    <p class="textwidth">
         Binnen de handboogsport wordt over het algemeen met drie
         verschillende bogen worden geschoten. Tot medio de 20ste eeuw
         werd er geschoten zonder vizier en stabilisatie, een barebow.
@@ -88,7 +88,7 @@
 
     <h4>Cursussen</h4>
 
-    <p class="textw">
+    <p class="textwidth">
         Een paar keer per jaar worden
         <a href="{% url '/beginnerscursus.html' %}">cursussen</a> gestart
         voor beginnende schutters. De cursus bestaat uit 10 lessen
@@ -102,12 +102,12 @@
 
     <h4>Meer over Geronimo</h4>
 
-    <p class="textw">
+    <p class="textwidth">
         Indien u meer wilt weten over Geronimo kunt u
         <a href="{% url '/contact.html' %}">informatie aanvragen</a>.
     </p>
 
-    <p class="textw">
+    <p class="textwidth">
         De naam van deze handboogvereniging komt natuurlijk van de
         Apache indiaan Geronimo. Voor de geïnteresseerden hebben we een
         korte geschiedenis van Geronimo samengesteld waarin u kunt
