--- a/pages/lidmaatschap.html
+++ b/pages/lidmaatschap.html
@@ -9,7 +9,7 @@
 {% block body %}
     <h2>Lidmaatschap (vanaf 12 jaar)</h2>
 
-    <p class="textw">
+    <p class="textwidth">
         Wie wil boogschieten bij Geronimo kan eerst gebruik maken van de
         <a href="{% url '/beginnerscursus.html' %}">beginnerscursus</a>.
         Daarna dient men lid te worden. Leden mogen, wanneer de zaal
@@ -22,7 +22,7 @@
         training en wedstrijden.
     </p>
 
-    <p class="textw">
+    <p class="textwidth">
         Leden van Geronimo worden geacht zelf hun materiaal te kopen.
         Het eerste halve jaar kan een nieuw lid een verenigingsboog
         huren. Daarna is het verplicht eigen materiaal aangeschaft te
@@ -48,7 +48,7 @@
         </tr>
     </table>
 
-    <p class="textw">
+    <p class="textwidth">
         Deze prijzen zijn een indicatie, mogelijk zijn deze inmiddels anders.<br>
         Het is mogelijk om deze contributie in termijnen te betalen.
     </p>
