--- a/pages/openingstijden.html
+++ b/pages/openingstijden.html
@@ -11,7 +11,7 @@
 
     <h4>Zaal</h4>
 
-    <p class="textw">
+    <p class="textwidth">
         Er mag alleen tijdens deze openingstijden geschoten worden in de
         <a href="{% url '/adres.html' %}">zaal</a>.
     </p>
@@ -29,14 +29,14 @@
         <tr><td>zondag</td><td>14:00 - 16:00</td><td style="text-align: right;">1 juni - eind september</td></tr>
     </table>
 
-    <p class="textw">
+    <p class="textwidth">
         Op vrijdag is er soms om de <a href="{% url '/beginnerscursus.html' %}">
         beginnerscursus</a>, dan kan er niet vrij geschoten worden.
     </p>
 
     <h4>Buitenveld</h4>
 
-    <p class="textw">
+    <p class="textwidth">
         Het <a href="{% url '/adres.html' %}">buitenveld</a> is
         gedurende de zomer geopend vanaf 1 april tot 1 oktober, daar
         zijn verder geen vaste dagen of tijden aan verbonden, maar er is
