--- a/pages/activiteiten/koningschieten/2005.html
+++ b/pages/activiteiten/koningschieten/2005.html
@@ -4,75 +4,71 @@
 {% block title %}{{ block.super }} : 2005{% endblock %}
 
 {% block body %}
-    <h2>Koningschieten 2005</h2>
-    <p>
-        Dames en heren, ondanks de geringe opkomst was het weereen prima
-        schuttersdag afgelopen zondag 11 september. Westreden weer om
-        het clubkampieonschap 2005. Dankzij degoede voorbereidingen van
-        Peter de Wilde werd de wedstrijd vlot verschoten. We mochten
-        zelfs pauzeren na de eerste 18 pijlen! Verassingen waren er ook:
-        de regerende jeugdkampioen, Yorik de Swart, werd verslagen door
-        een nieuw jeugd lid, Arne de Laat. Hieronder de voledige
-        uitslag.
-    </p>
 
-    <h3>Uitslag</h3>
+{% filter markdown:'tables,markdown-in-html' %}
 
-    <table><tr>
-        <td width="250" valign="top">
-            <h5>Jeugd (alleen jongens)</h5>
+## Koningschieten 2005
 
-            <p>Recurve:</p>
-            <table width="210">
-                <tr><th width="40">Naam</th><th width="40">Score</th></tr>
-                <tr><td>Arne de Laat</td><td>582</td></tr>
-                <tr><td>Yorik de Swart</td><td>564</td></tr>
-                <tr><td>Bojan Sandhaus</td><td>499</td></tr>
-                <tr><td>Bas van Barneveld</td><td>413</td></tr>
-                <tr><td>Elmar vd Puttelaar</td><td>340</td></tr>
-            </table>
+Dames en heren, ondanks de geringe opkomst was het weereen prima schuttersdag
+afgelopen zondag 11 september. We streden weer om het clubkampieonschap 2005.
+Dankzij degoede voorbereidingen van Peter de Wilde werd de wedstrijd vlot
+verschoten. We mochten zelfs pauzeren na de eerste 18 pijlen! Verassingen
+waren er ook: de regerende jeugdkampioen, Yorik de Swart, werd verslagen door
+een nieuw jeugd lid, Arne de Laat. Hieronder de voledige uitslag.
 
-            <p>Compound:</p>
-            <table width="210">
-                <tr><th width="40">Naam</th><th width="40">Score</th></tr>
-                <tr><td>Martyn den Besten</td><td>475</td></tr>
-            </table>
-        </td>
-        <td>
-            <h5>Volwassen</h5>
-            <p>
-                Recurve:<br>
-                Heren
-            </p>
-            <table width="210">
-                <tr><th width="40">Naam</th><th width="40">Score</th></tr>
-                <tr><td>Maarten de Jong</td><td>499</td></tr>
-                <tr><td>Marcel van Baalen</td><td>490</td></tr>
-                <tr><td>Hans Pruijs</td><td>447</td></tr>
-                <tr><td>Paul Brasse</td><td>439</td></tr>
-            </table>
+### Uitslagen
 
-            <p>
-                Compound:<br>
-                Heren
-            </p>
-            <table width="210">
-                <tr><th width="40">Naam</th><th width="40">Score</th></tr>
-                <tr><td>Sander de Vries (1)</td><td>665</td></tr>
-                <tr><td>Peter de Wilde</td><td>616</td></tr>
-                <tr><td>Peterde Jong</td><td>616</td></tr>
-            </table>
+<div markdown='1' class='table-left'>
+### Recurve
 
-            <p>
-                Dames
-            </p>
-            <table width="210">
-                <tr><th>Naam</th><th width="40">Score</th></tr>
-                <tr><td>Françoise Weijters (1)</td><td>645</td></tr>
-            </table> 
-        </td>
-    </tr></table>
-    <p>
-        (1) buiten mededinging, is al keijzer(in)
-    </p>
+#### Heren
+
+| Naam                   | Score |
+|------------------------|------:|
+| Maarten de Jong        | 499   |
+| Marcel van Baalen      | 490   |
+| Hans Pruijs            | 447   |
+| Paul Brasse            | 439   |
+
+#### Heren jeugd
+
+| Naam                   | Score |
+|------------------------|------:|
+| Arne de Laat           | 582   |
+| Yorik de Swart         | 564   |
+| Bojan Sandhaus         | 499   |
+| Bas van Barneveld      | 413   |
+| Elmar vd Puttelaar     | 340   |
+</div>
+
+<div markdown='1' class='table-left'>
+### Compound
+
+#### Heren
+
+| Naam                   | Score |
+|------------------------|------:|
+| Sander de Vries (1)    | 665   |
+| Peter de Wilde         | 616   |
+| Peterde Jong           | 616   |
+
+#### Dames
+
+| Naam                   | Score |
+|------------------------|------:|
+| Françoise Weijters (1) | 645   |
+
+#### Heren jeugd
+
+| Naam                   | Score |
+|------------------------|------:|
+| Martyn den Besten      | 475   |
+</div>
+
+<div class='clearer'></div>
+
+(1) buiten mededinging, is al keijzer(in)
+
+{% endfilter %}
+
 {% endblock %}
