--- a/pages/activiteiten/koningschieten/2007.html
+++ b/pages/activiteiten/koningschieten/2007.html
@@ -4,53 +4,61 @@
 {% block title %}{{ block.super }} : 2007{% endblock %}
 
 {% block body %}
-    <h2>Koningschieten 2007</h2>
-    <p>
-        De wedstrijd vond plaats op 15 September.<br>
-        Patric, het enige aanwezige jeugd lid, schoot twee rondes op 20
-        meter.<br>
-        De volwassenen schoten op 50 en 30 meter, iedereen schoot 36
-        pijlen per ronde.
-    </p>
 
-    <h3>Uitslag</h3>
-    <table><tr>
-        <td width="250" valign="top">
-            <h5>Recurve</h5>
-            <p>Heren:</p>
-            <table width="220">
-                <tr><th width="40">Naam</th><th width="40">Score</th></tr>
-                <tr><td>Willem van Bergeijk</td><td>547</td></tr>
-                <tr><td>Marcel van Baalen</td><td>543</td></tr>
-                <tr><td>Maarten de Jong</td><td>536</td></tr>
-                <tr><td>Ari van Wettum</td><td>521</td></tr>
-                <tr><td>Jeffrey Maagdenberg</td><td>495</td></tr>
-                <tr><td>Arne de Laat</td><td>488</td></tr>
-            </table>
-            <p>Jongens:</p>
-            <table width="220">
-                <tr><th width="40">Naam</th><th width="40">Score</th></tr>
-                <tr><td>Patric</td><td>488</td></tr>
-            </table>
-        </td>
-        <td valign="top">
-            <h5>Compound</h5>
-            <p>Heren:</p>
-            <table width="220">
-                <tr><th width="40">Naam</th><th width="40">Score</th></tr>
-                <tr><td>Sander de Vries (1)</td><td>692</td></tr>
-                <tr><td>Peter de Wilde</td><td>633</td></tr>
-                <tr><td>Shaun Maitland</td><td>626</td></tr>
-                <tr><td>Peter de Jong</td><td>612</td></tr>
-            </table>
-            <p>Dames:</p>
-            <table width="220">
-                <tr><th width="40">Naam</th><th width="40">Score</th></tr>
-                <tr><td>Françoise Weijters (1)</td><td>603</td></tr>
-            </table>
-        </td>
-    </tr></table>
-    <p>
-        (1) buiten mededinging, is al keijzer(in)
-    </p>
+{% filter markdown:'tables,markdown-in-html' %}
+
+## Koningschieten 2007
+
+De wedstrijd vond plaats op 15 september.<br>
+Patric, het enige aanwezige jeugd lid, schoot twee rondes op 20 meter.<br>
+De volwassenen schoten op 50 en 30 meter, iedereen schoot 36
+pijlen per ronde.
+
+### Uitslagen
+
+<div markdown='1' class='table-left'>
+### Recurve
+
+#### Heren
+
+| Naam                   | Score |
+|------------------------|------:|
+| Willem van Bergeijk    | 547   |
+| Marcel van Baalen      | 543   |
+| Maarten de Jong        | 536   |
+| Ari van Wettum         | 521   |
+| Jeffrey Maagdenberg    | 495   |
+| Arne de Laat           | 488   |
+
+#### Jongens
+
+| Naam                   | Score |
+|------------------------|------:|
+| Patric                 | 488   |
+</div>
+
+<div markdown='1' class='table-left'>
+### Compound
+
+#### Heren
+
+| Naam                   | Score |
+|------------------------|------:|
+| Sander de Vries (1)    | 692   |
+| Peter de Wilde         | 633   |
+| Shaun Maitland         | 626   |
+| Peter de Jong          | 612   |
+
+#### Dames
+
+| Naam                   | Score |
+|------------------------|------:|
+| Françoise Weijters (1) | 603   |
+</div>
+
+<div class='clearer'></div>
+(1) buiten mededinging, is al keijzer(in)
+
+{% endfilter %}
+
 {% endblock %}
