--- a/pages/activiteiten/koningschieten/2015.html
+++ b/pages/activiteiten/koningschieten/2015.html
@@ -4,66 +4,76 @@
 {% block title %}{{ block.super }} : 2015{% endblock %}
 
 {% block body %}
-    <h2>Koningschieten 2015</h2>
-    <p>
-        De wedstrijd vond plaats op zaterdag 27 Juni. De foto's van de
-        wedstrijd zijn op de <a href="{% url '/fotos.html' %}">foto</a> pagina te vinden.
-    </p>
 
-    <h3>Uitslag</h3>
+{% filter markdown:'tables,markdown-in-html' %}
 
-    <table><tr>
-        <td width="240" valign="top">
-            <h5>Recurve</h5>
-            <p>Heren > 18</p>
-            <table width="220">
-                <tr><th width="200">Naam</th><th>Score</th></tr>
-                <tr><td></td><td></td></tr>
-                <tr><td>Jeffrey Maagdenberg</td><td>550</td></tr>
-                <tr><td>Jan van Doorn</td><td>515</td></tr>
-                <tr><td>Bas Mol</td><td>500</td></tr>
-                <tr><td>Maarten de Jong</td><td>475</td></tr>
-                <tr><td>Quirijn Blokker</td><td>427</td></tr>
-                <tr><td>Willem Mol</td><td>362</td></tr>
-                <tr><td>Wout van der Brug</td><td>328</td></tr>
-            </table>
-            <p>Dames > 18</p>
-            <table width="220">
-                <tr><th width="200">Naam</th><th>Score</th></tr>
-                <tr><td>Conny Buzink</td><td>464</td></tr>
-                <tr><td>Marga van Doorn</td><td>460</td></tr>
-            </table>
-            <p>Heren < 18</p>
-            <table width="220">
-                <tr><th width="200">Naam</th><th>Score</th></tr>
-                <tr><td>Oscar Snijders</td><td>440</td></tr>
-                <tr><td>Erik Meijer</td><td>380</td></tr>
-                <tr><td>Rinze Custers</td><td>303</td></tr>
-            </table>
-            <p>Dames < 18</p>
-            <table width="220">
-                <tr><th width="200">Naam</th><th>Score</th></tr>
-                <tr><td>Maeke Maagdenberg</td><td>345</td></tr>
-            </table>
-        </td>
-        <td width="240" valign="top">
-            <h5>Compound</h5>
-            <p>Heren > 18</p>
-            <table width="220">
-                <tr><th width="200">Naam</th><th>Score</th></tr>
-                <tr><td>Kasper Dieho</td><td>662</td></tr>
-                <tr><td>Arjan van Doorn</td><td>564</td></tr>
-            </table>
-        </td>
-        <td width="240" valign="top">
-            <h5>Barebow</h5>
-            <p>Heren > 18</p>
-            <table width="220">
-                <tr><th width="200">Naam</th><th>Score</th></tr>
-                <tr><td>Shaun Maitland</td><td>485</td></tr>
-                <tr><td>Arnold Dittmar</td><td>480</td></tr>
-                <tr><td>Gerwin Postma</td><td>385</td></tr>
-            </table>
-        </td>
-    </tr></table>
+## Koningschieten 2015
+
+De wedstrijd vond plaats op zaterdag 27 Juni. De foto's van de
+wedstrijd zijn op de <a href="{% url '/fotos.html' %}">foto</a> pagina te vinden.
+
+### Uitslagen
+
+<div markdown='1' class='table-left'>
+### Recurve
+
+#### Heren
+
+| Naam                | Score |
+|---------------------|------:|
+| Jeffrey Maagdenberg | 550   |
+| Jan van Doorn       | 515   |
+| Bas Mol             | 500   |
+| Maarten de Jong     | 475   |
+| Quirijn Blokker     | 427   |
+| Willem Mol          | 362   |
+| Wout van der Brug   | 328   |
+
+#### Dames
+
+| Naam                | Score |
+|---------------------|------:|
+| Conny Buzink        | 464   |
+| Marga van Doorn     | 460   |
+
+#### Heren jeugd
+
+| Naam                | Score |
+|---------------------|------:|
+| Oscar Snijders      | 440   |
+| Erik Meijer         | 380   |
+| Rinze Custers       | 303   |
+
+#### Dames jeugd
+
+| Naam                | Score |
+|---------------------|------:|
+| Maeke Maagdenberg   | 345   |
+</div>
+
+<div markdown='1' class='table-left'>
+### Compound
+
+#### Heren
+
+| Naam            | Score |
+|-----------------|------:|
+| Kasper Dieho    | 662   |
+| Arjan van Doorn | 564   |
+</div>
+
+<div markdown='1' class='table-left'>
+### Barebow
+
+#### Heren
+
+| Naam            | Score |
+|-----------------|------:|
+| Shaun Maitland  | 485   |
+| Arnold Dittmar  | 480   |
+| Gerwin Postma   | 385   |
+</div>
+
+{% endfilter %}
+
 {% endblock %}
