--- a/pages/workshop.html
+++ b/pages/workshop.html
@@ -16,17 +16,17 @@
 
     <h2>Workshop</h2>
 
-    <p class="textw">
+    <p class="textwidth">
         Zoekt u een leuke activiteit voor een bedrijfsuitje, verjaardag
         of andere gelegenheid?<br> SHS Geronimo kan dat voor u verzorgen.
     </p>
 
-    <p class="textw">
+    <p class="textwidth">
         U krijgt instructies van onze ervaren schutters waarna er een
         wedstrijd kan worden geschoten.
     </p>
 
-    <p class="textw">
+    <p class="textwidth">
         Ook is er de mogelijkheid om na de wedstrijd van een gezellig
         etentje in onze knusse kantine te genieten en/of tijdens de
         wedstrijd een lekkere snack te nuttigen, wij regelen dit graag
@@ -35,22 +35,22 @@
 
     <h3>Voorbeeld</h3>
 
-    <p class="textw">
+    <p class="textwidth">
         Bedrijfsuitje kost €15 pp per uur  (exclusief drankjes en
         snacks) .<br> Neem voor eten of snack even contact met ons op.
     </p>
 
-    <p class="textw">
+    <p class="textwidth">
         Wilt u een indruk krijgen van de gezellige sfeer, kijk dan bij
         de <a href="{% url '/fotos.html' %}">foto's</a>  onder 2011 bij Demo.
     </p>
 
-    <p class="textw">
+    <p class="textwidth">
         Neem voor meer informatie contact op met de <a id="email_voorz"
         href="#">voorzitter</a>.
     </p><br>
 
-    <p class="textw">
+    <p class="textwidth">
         We kunnen groepen van minimaal 10 tot maximaal ongeveer 25
         personen faciliteren. De minimum leeftijd voor de deelnemers is
         12 jaar. In verband met de grote belangstelling graag minimaal
