Remove Wout as secretary

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -31,7 +31,7 @@
             </ul>
         </li>
         <li>
-            <a id="email_secre" href="#">Wout van de Brug</a> &ndash; secretaris
+            <a id="email_secre" href="#">[vacature]</a> &ndash; secretaris
             <ul>
                 <li>Aanspreekpunt nieuwe cursisten</li>
                 <li>Ledenlijst</li>
