Clarify some texts

--- a/pages/beginnerscursus.html
+++ b/pages/beginnerscursus.html
@@ -23,7 +23,7 @@
 
 <p class="textwidth">
     Deze bestaat uit 10 lessen van een uur en wordt twee keer per jaar
-    georganiseerd, voor en najaar. De groep bestaat uit maximaal 8
+    georganiseerd, in het voor en najaar. Een groep bestaat uit maximaal 8
     cursisten. Voor de cursus hoeft u zelf geen materiaal te hebben,
     huur van boog, pijlen en andere attributen zijn in de prijs van de
     cursus inbegrepen.
@@ -53,13 +53,10 @@
 <h4>Wanneer?</h4>
 
 <p class="textwidth">
-    Er zijn twee beginnerscursussen per jaar;
+    Er zijn meerdere beginnerscursussen per jaar;
+    Die beginnen op de <strong>laatste vrijdag van september</strong>
+    of op de <strong>3e vrijdag van januari</strong>.
 </p>
-
-<ul>
-    <li>Een begint op de laatste vrijdag van september</li>
-    <li>De ander op de 3e vrijdag van januari</li>
-</ul>
 
 <p class="textwidth">
     Voor elke cursus is er ruimte voor 8 schutters, de selectie
@@ -72,9 +69,9 @@
 
 <p class="textwidth">
     De 10 lessen worden gegeven op de vrijdag (elke week, voor 10 weken) van
-    19.30 tot 20.30 uur.<br>
-    De lessen beginnen om 19:30, graag willen we dan beginnen met de les,
-    kom dus iets eerder om je boog alvast te pakken.
+    19.00 tot 20.00 uur, en van 20.15 tot 21.15 uur.<br>
+    De lessen beginnen precies op de start tijd, graag willen we dan beginnen
+    met de les, kom dus iets eerder om je boog alvast te pakken.
 </p>
 
 <hr>
