--- a/pages/openingstijden.html
+++ b/pages/openingstijden.html
@@ -31,7 +31,9 @@
 
     <p class="textwidth">
         Op vrijdag is er soms om de <a href="{% url '/beginnerscursus.html' %}">
-        beginnerscursus</a>, dan kan er niet vrij geschoten worden.
+        beginnerscursus</a>, dan kan er niet vrij geschoten worden.<br>
+        De beginnerscursussen beginnen begin september en half januari,
+        de cursussen duren 10 weken.
     </p>
 
     <h4>Buitenveld</h4>
