Remove Gijs as bestuurslid.

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,7 +18,7 @@
 
     <h2>Bestuursleden</h2>
 
-    <p style="font-style: italic;">Per 6 november, 2015</p>
+    <p style="font-style: italic;">Per 27 september, 2016</p>
 
     <ul>
         <li>
@@ -48,7 +48,7 @@
             </ul>
         </li>
         <li>
-            <a id="email_organ" href="#">Gijs van Doorn</a> &ndash; organisatie en beheer
+            <a id="email_organ" href="#">[vacature]</a> &ndash; organisatie en beheer
             <ul>
                 <li>Organisatie</li>
                 <li>Catering</li>
@@ -88,21 +88,18 @@
         _secre = "secretaris",
         _penni = "penningmeester",
         _rayon = "rayonzaken",
-        _doorn = "qeqe53wd",
         _webma = "webmaster";
 
     var _voorz2 = _mailt + _voorz + _at + _extger,
         _secre2 = _mailt + _secre + _at + _extger,
         _penni2 = _mailt + _penni + _at + _extger,
         _rayon2 = _mailt + _rayon + _at + _extger,
-        _doorn2 = _mailt + _doorn + _at + _extkpn,
         _webma2 = _mailt + _webma + _at + _extger;
 
     // Bestuur
     document.getElementById('email_voorz').href = _voorz2;
     document.getElementById('email_secre').href = _secre2;
     document.getElementById('email_penni').href = _penni2;
-    document.getElementById('email_organ').href = _doorn2;
 
     // Extra
     document.getElementById('email_secre2').href = _secre2;
