Update cursus lessen traditioneel. Remove 'Aspiranten' level, now part of 'Jeugd'.

--- a/pages/beginnerscursus.html
+++ b/pages/beginnerscursus.html
@@ -37,15 +37,15 @@
     </tr>
     <tr>
         <td>Jeugd, 12 t/m 17 jaar</td>
-        <td>&euro; 80,00</td>
+        <td>€80,00</td>
     </tr>
     <tr>
         <td>Studenten</td>
-        <td>&euro; 80,00</td>
+        <td>€80,00</td>
     </tr>
     <tr>
         <td>Volwassenen, v.a. 18 jaar</td>
-        <td>&euro; 100,00</td>
+        <td>€100,00</td>
     </tr>
 </table>
 
@@ -80,7 +80,7 @@
 
 <p class="textwidth">
     De cursus Traditioneel schieten (met houten boog zonder richtmiddelen)
-    bestaat uit 5 lessen van een uur en wordt één keer per jaar
+    bestaat uit 3 lessen van twee uur en wordt één keer per jaar
     georganiseerd en wel in <b>juni</b>. De groep bestaat uit maximaal 5
     cursisten.
 </p>
@@ -93,15 +93,15 @@
     </tr>
     <tr>
         <td>Jeugd, 12 t/m 17 jaar</td>
-        <td>&euro; 40,00</td>
+        <td>€40,00</td>
     </tr>
     <tr>
         <td>Studenten</td>
-        <td>&euro; 40,00</td>
+        <td>€40,00</td>
     </tr>
     <tr>
         <td>Volwassenen, v.a. 18 jaar</td>
-        <td>&euro; 50,00</td>
+        <td>€50,00</td>
     </tr>
 </table>
 
@@ -111,7 +111,7 @@
     lessen recurve volgen.
 </p>
 
-<hr> 
+<hr>
 
 <h3>Aanmelden?</h3>
 
