--- a/pages/lidmaatschap.html
+++ b/pages/lidmaatschap.html
@@ -35,16 +35,12 @@
             <th colspan="2" style="text-align: center;">Jaarlijkse contributie</th>
         </tr>
         <tr>
-            <td>Aspiranten t/m 14 jaar</td>
-            <td>€92,-</td>
-        </tr>
-        <tr>
-            <td>Jeugd 15 t/m 17 jaar</td>
-            <td>€135,-</td>
+            <td>Jeugd t/m 17 jaar</td>
+            <td>€138,75/td>
         </tr>
         <tr>
             <td>Volwassenen v.a. 18 jaar</td>
-            <td>€192,-</td>
+            <td>€192,50/td>
         </tr>
     </table>
 
