Reenable 'aanmeld' form

--- a/pages/aanmelden.html
+++ b/pages/aanmelden.html
@@ -15,32 +15,32 @@
     </p>
 
     <p>
-        <b>Let op!</b> De aanmelding is pas definitief als de helft van het
-        lesgeld overmaakt is.<br>
-        Maak na de aanmelding dus € 50 (of €40 voor jeugd/studenten) over,
+        <b>Let op!</b> De aanmelding is pas definitief als de <b>helft</b> van
+        het lesgeld overmaakt is.<br>
+        Maak na de aanmelding dus €50 (of €40 voor jeugd/studenten) over,
         onder vermelding van uw naam,<br>
         naar: <i>NL35 INGB 0005 2303 09, t.n.v. SHS Geronimo te Zeist</i>.
     </p>
 
     <p>
         Na succesvolle aanmelding zal u een mail ontvangen van ons ter
-        bevestiging en meer informatie. Mocht u na <b>6</b> weken nog niets van ons gehoord hebben, 
-        neem dan contact op met de <a id="email_secre" href="#"><b>secretaris</b></a> voor meer informatie.     
+        bevestiging en meer informatie. Mocht u na <b>6</b> weken nog niets van ons gehoord hebben,
+        neem dan contact op met de <a id="email_secre" href="#"><b>secretaris</b></a> voor meer informatie.
     </p>
 
     <h3>Aanmeld formulier</h3>
 
+{% comment %}
     <p>
         <strong>Het inschrijf formulier is tijdelijk gesloten, probeer
         het over een paar weken nog eens, of stuur een mail naar de secretaris!</strong>
     </p>
+{% endcomment %}
 
-<!-- 
     <div class="cognito">
         <script src="https://services.cognitoforms.com/s/vs6FWsIiSEGGFdPsq90Erg"></script>
-        <script>Cognito.load("forms", { id: "1" });</script>
+        <script>Cognito.load("forms", {id: "1" });</script>
     </div>
- -->
 {% endblock %}
 
 {% block script %}
