Update tables. Remove align in markdown HTML tables. Fix wrong number of table cells. Move faded table row style to CSS.

--- a/pages/openingstijden.html
+++ b/pages/openingstijden.html
@@ -19,14 +19,52 @@
     <p>Reguliere openingstijden voor vrij schieten:</p>
 
     <table>
-        <tr><th colspan="2" style="text-align: center;">Dagen en tijden</th><th style="text-align: center;">Zomer sluiting</th><th style="text-align: center;">Opmerkingen</th></tr>
-        <tr><td style="width: 80px">maandag</td><td style="width: 80px">19:30 - 21:30</td><td style="text-align: right;">1 juni - eind september</td></tr>
-        <tr><td style="color: #bbb;">dinsdag</td><td style="color: #bbb;">dicht</td><td></td></tr>
-        <tr><td style="color: #bbb;">woensdag</td><td style="color: #bbb;">dicht</td><td></td></tr>
-        <tr><td>donderdag</td><td>19:30 - 21:30</td><td style="text-align: right;">open tijdens zomer</td></tr>
-        <tr><td>vrijdag</td><td>19:30 - 21:30</td><td style="text-align: right;">1 juni - eind september</td></tr>
-        <tr><td style="color: #bbb;">zaterdag</td><td style="color: #bbb;">dicht</td><td></td><td></td></tr>
-        <tr><td>zondag</td><td>14:00 - 16:00</td><td style="text-align: right;">1 juni - eind september</td></tr>
+        <tr>
+            <th colspan="2" style="text-align: center;">Dagen en tijden</th>
+            <th style="text-align: center;">Zomer sluiting</th>
+            <th style="text-align: center;">Opmerkingen</th>
+        </tr>
+        <tr>
+            <td style="width: 80px">maandag</td>
+            <td style="width: 80px">19:30 - 21:30</td>
+            <td style="text-align: right;">1 juni - eind september</td>
+            <td></td>
+        </tr>
+        <tr class="faded">
+            <td>dinsdag</td>
+            <td>dicht</td>
+            <td></td>
+        </tr>
+        <tr class="faded">
+            <td>woensdag</td>
+            <td>dicht</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>donderdag</td>
+            <td>19:30 - 21:30</td>
+            <td style="text-align: right;">open tijdens zomer</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>vrijdag</td>
+            <td>19:30 - 21:30</td>
+            <td style="text-align: right;">1 juni - eind september</td>
+            <td></td>
+        </tr>
+        <tr class="faded">
+            <td>zaterdag</td>
+            <td>dicht</td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>zondag</td>
+            <td>14:00 - 16:00</td>
+            <td style="text-align: right;">1 juni - eind september</td>
+            <td></td>
+        </tr>
     </table>
 
     <p class="textwidth">
