--- a/pages/activiteiten/koningschieten.html
+++ b/pages/activiteiten/koningschieten.html
@@ -18,27 +18,82 @@
         die behouden blijft totdat iemand anders drie jaar achtereen
         wint.
     </p>
-   
+
     <h3>Huidige titelhouders</h3>
 
-    <table><tr>
-        <th colspan="3" width="450px">Klassement 2016</th></tr>
-        <tr><th width="150px">Klasse</th><th width="150px">Koning(in)</th><th width="150px">Keizer(in)</th></tr>
-        <tr><td>Recurve heren jeugd</td><td>Oscar Snijders</td><td></td></tr>
-        <tr><td>Recurve heren</td><td>Bas Mol</td><td>Peter de Wilde</td></tr>
-        <tr><td>Recurve dames jeugd</td><td>Moira v. Uunen</td><td></td></tr>
-        <tr><td>Recurve dames</td><td>Carola Blokker</td><td></td></tr>
-        <tr><td>Compound heren jeugd</td><td>Martyn den Besten</td><td></td></tr>
-        <tr><td>Compound heren</td><td>Jan van Doorn</td><td>Sander de Vries</td></tr>
-        <tr><td>Compound dames jeugd</td><td>-</td><td></td></tr>
-        <tr><td>Compound dames</td><td>Françoise Weijters-Bage</td><td>Françoise Weijters-Bage</td></tr>
-        <tr><td>Barebow heren jeugd</td><td>Julan Wardenier</td><td></td></tr>
-        <tr><td>Barebow heren</td><td>Danny Martherus</td><td>Arnold Dittmar</td></tr>
-        <tr><td>Barebow dames jeugd</td><td>Arwende Wardenier</td><td></td></tr>
-        <tr><td>Barebow dames</td><td>Conny Buzink</td><td>Hetty van Eldijk</td></tr>
-    </table>    
+    <table>
+        <tr>
+            <th colspan="3" width="450px">Klassement 2016</th>
+        </tr>
+        <tr>
+            <th width="150px">Klasse</th>
+            <th width="150px">Koning(in)</th>
+            <th width="150px">Keizer(in)</th>
+        </tr>
+        <tr>
+            <td>Recurve heren jeugd</td>
+            <td>Oscar Snijders</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Recurve heren</td>
+            <td>Bas Mol</td>
+            <td>Peter de Wilde</td>
+        </tr>
+        <tr>
+            <td>Recurve dames jeugd</td>
+            <td>Moira v. Uunen</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Recurve dames</td>
+            <td>Carola Blokker</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Compound heren jeugd</td>
+            <td>Martyn den Besten</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Compound heren</td>
+            <td>Jan van Doorn</td>
+            <td>Sander de Vries</td>
+        </tr>
+        <tr>
+            <td>Compound dames jeugd</td>
+            <td>-</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Compound dames</td>
+            <td>Françoise Weijters-Bage</td>
+            <td>Françoise Weijters-Bage</td>
+        </tr>
+        <tr>
+            <td>Barebow heren jeugd</td>
+            <td>Julan Wardenier</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Barebow heren</td>
+            <td>Danny Martherus</td>
+            <td>Arnold Dittmar</td>
+        </tr>
+        <tr>
+            <td>Barebow dames jeugd</td>
+            <td>Arwende Wardenier</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Barebow dames</td>
+            <td>Conny Buzink</td>
+            <td>Hetty van Eldijk</td>
+        </tr>
+    </table>
 
     <h3>Uitslagen</h3>
+
     <ul>
         <li><a href="{% url '/activiteiten/koningschieten/2016.html' %}">2016</a></li>
         <li><a href="{% url '/activiteiten/koningschieten/2015.html' %}">2015</a></li>
