Remove obsolete iframe attributes.

--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -9,7 +9,6 @@
 {% block body %}
     <iframe name="http://arne.delaat.net/Photos_Archery/"
             src="http://arne.delaat.net/Photos_Archery/"
-            style="width:100%;" height="750" frameborder="0"
-            scrolling="auto" id="target">
+            style="width:100%;" height="750" id="target">
     </iframe>
 {% endblock %}
