Move width attributes to styles

--- a/pages/activiteiten/koningschieten.html
+++ b/pages/activiteiten/koningschieten.html
@@ -23,12 +23,12 @@
 
     <table>
         <tr>
-            <th colspan="3" width="450px">Klassement 2016</th>
+            <th colspan="3" style="width: 450px;">Klassement 2016</th>
         </tr>
         <tr>
-            <th width="150px">Klasse</th>
-            <th width="150px">Koning(in)</th>
-            <th width="150px">Keizer(in)</th>
+            <th style="width: 150px;">Klasse</th>
+            <th style="width: 150px;">Koning(in)</th>
+            <th style="width: 150px;">Keizer(in)</th>
         </tr>
         <tr>
             <td>Recurve heren jeugd</td>
