Add alt to img tag.

--- a/pages/filmpjes.html
+++ b/pages/filmpjes.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="http://arne.delaat.net/style/tipTip.css">
     <link rel="stylesheet" href="http://arne.delaat.net/static/css/video.css">
     <link rel="stylesheet" href="http://arne.delaat.net/static/css/controls.css">
-<!-- 
+<!--
     <link rel="stylesheet" href="http://arne.delaat.net/static/css/vendor/font-awesome.css">
  -->
     <link rel="stylesheet" href="http://arne.delaat.net/static/css/thumbs/D80.css">
@@ -46,7 +46,7 @@
     </ul>
 
     <div id="movie" style="background-color:#ffffff; height:665px;">
-        <img id="poster" class="showing" style="margin:0px 235px;"
+        <img id="poster" class="showing" style="margin:0px 235px;" alt="Click to play"
              data-id="D80_090906_2" src="{% static '/static/images_filmpjes/clicktoplay.jpg' %}" />
         <video id="player"></video>
     </div>
