--- a/pages/filmpjes.html
+++ b/pages/filmpjes.html
@@ -8,12 +8,10 @@
 
 {% block head %}
     <link rel="stylesheet" href="http://arne.delaat.net/static/css/vendor/normalize.css">
-    <link rel="stylesheet" href="http://arne.delaat.net/style/tipTip.css">
+    <link rel="stylesheet" href="http://arne.delaat.net/static/css/vendor/font-awesome.css">
+    <link rel="stylesheet" href="http://arne.delaat.net/static/css/tipTip.css">
     <link rel="stylesheet" href="http://arne.delaat.net/static/css/video.css">
     <link rel="stylesheet" href="http://arne.delaat.net/static/css/controls.css">
-<!--
-    <link rel="stylesheet" href="http://arne.delaat.net/static/css/vendor/font-awesome.css">
- -->
     <link rel="stylesheet" href="http://arne.delaat.net/static/css/thumbs/D80.css">
     <link rel="stylesheet" href="http://arne.delaat.net/static/css/thumbs/D90.css">
     <link rel="stylesheet" href="http://arne.delaat.net/static/css/thumbs/D700.css">
@@ -46,14 +44,14 @@
     </ul>
 
     <div id="movie" style="background-color:#ffffff; height:665px;">
-        <img id="poster" class="showing" style="margin:0px 235px;" alt="Click to play"
+        <img id="poster" class="showing" style="width: auto; margin:0px 235px;" alt="Click to play"
              data-id="D80_090906_2" src="{% static '/static/images_filmpjes/clicktoplay.jpg' %}" />
         <video id="player"></video>
     </div>
 {% endblock %}
 
 {% block scripts %}
-    <script src="http://arne.delaat.net/script/jquery.min.js"></script>
-    <script src="http://arne.delaat.net/script/jquery.tipTip.min.js"></script>
+    <script src="http://arne.delaat.net/static/js/vendor/jquery-1.10.2.js"></script>
+    <script src="http://arne.delaat.net/static/js/vendor/jquery.tipTip.min.js"></script>
     <script src="http://arne.delaat.net/static/js/video.js"></script>
 {% endblock %}
