--- a/pages/fotos.html
+++ b/pages/fotos.html
@@ -7,8 +7,12 @@
 {% block logo-position %}top: -150px; left: 460px;{% endblock %}
 
 {% block body %}
-    <iframe name="http://arne.delaat.net/Photos_Archery/"
-            src="http://arne.delaat.net/Photos_Archery/"
-            style="width:100%;" height="750" id="target">
+    <iframe class="album" src="about:blank" height="750" id="target"
+            data-album="http://arne.delaat.net/Photos_Archery/">
     </iframe>
+{% endblock %}
+
+{% block scripts %}
+    <script src="http://arne.delaat.net/static/js/vendor/jquery-1.10.2.js"></script>
+    <script src="http://arne.delaat.net/static/js/photos.js"></script>
 {% endblock %}
