Ask for payment via mail, confirmation only definitive after mail. Reduce recommended wait time.

--- a/pages/aanmelden.html
+++ b/pages/aanmelden.html
@@ -15,16 +15,14 @@
     </p>
 
     <p>
-        <b>Let op!</b> De aanmelding is pas definitief als de <b>helft</b> van
-        het lesgeld overmaakt is.<br>
-        Maak na de aanmelding dus €50 (of €40 voor jeugd/studenten) over,
-        onder vermelding van uw naam,<br>
-        naar: <i>NL35 INGB 0005 2303 09, t.n.v. SHS Geronimo te Zeist</i>.
+        <b>Let op!</b> De aanmelding is niet direct definitief.<br>
+        Na de aanmelding zal via mail bevestigd worden of u inderdaad deel kunt nemen aan
+        de cursus en hoe de betaling plaats moet vinden.
     </p>
 
     <p>
-        Na succesvolle aanmelding zal u een mail ontvangen van ons ter
-        bevestiging en meer informatie. Mocht u na <b>6</b> weken nog niets van ons gehoord hebben,
+        Na succesvolle aanmelding zal u een mail ontvangen met  meer informatie.
+        Mocht u na een week nog niets van ons gehoord hebben,
         neem dan contact op met de <a id="email_secre" href="#"><b>secretaris</b></a> voor meer informatie.
     </p>
 
