Update bestuur. Based on ALV notulen from 12-10-2017 and 30-11-2017.

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,7 +10,7 @@
     <div style="float:right;width:30%">
         <h2>Facebook</h2>
         <p>
-            <a href="https://www.facebook.com/pages/SHS-Geronimo/279675712156072/" target="_blank"> 
+            <a href="https://www.facebook.com/pages/SHS-Geronimo/279675712156072/" target="_blank">
                 <i style="font-size: 2em;" class="fa fa-facebook-square"></i> SHS Geronimo
             </a>
         </p>
@@ -18,7 +18,7 @@
 
     <h2>Bestuursleden</h2>
 
-    <p style="font-style: italic;">Per 27 september, 2016</p>
+    <p style="font-style: italic;">Per 30 november, 2017</p>
 
     <ul>
         <li>
@@ -31,7 +31,7 @@
             </ul>
         </li>
         <li>
-            <a id="email_secre" href="#">[vacature]</a> &ndash; secretaris
+            <a id="email_secre" href="#">Suus van Zorge</a> &ndash; secretaris
             <ul>
                 <li>Aanspreekpunt nieuwe cursisten</li>
                 <li>Ledenlijst</li>
@@ -47,15 +47,9 @@
                 <li>Financieel jaarverslag</li>
             </ul>
         </li>
-        <li>
-            <a id="email_organ" href="#">[vacature]</a> &ndash; organisatie en beheer
-            <ul>
-                <li>Organisatie</li>
-                <li>Catering</li>
-                <li>Workshops</li>
-                <li>Verschietingen</li>
-            </ul>
-        </li>
+        <li>Janine van Dijk</li>
+        <li>I. Aarts</li>
+        <li>J. Zerner</li>
     </ul>
 
     <h2>Wilt u meer informatie?</h2>
