--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,7 +18,7 @@
 
     <h2>Bestuursleden</h2>
 
-    <p style="font-style: italic;">Per 30 november, 2017</p>
+    <p style="font-style: italic;">Per 30 december, 2017</p>
 
     <ul>
         <li>
@@ -41,7 +41,7 @@
             </ul>
         </li>
         <li>
-            <a id="email_penni" href="#">Quirijn Blokker</a> &ndash; penningmeester
+            <a id="email_penni" href="#">[vacature]</a> &ndash; penningmeester
             <ul>
                 <li>Begroting</li>
                 <li>Financieel jaarverslag</li>
@@ -49,7 +49,6 @@
         </li>
         <li>Janine van Dijk</li>
         <li>I. Aarts</li>
-        <li>J. Zerner</li>
     </ul>
 
     <h2>Wilt u meer informatie?</h2>
