--- a/pages/activiteiten.html
+++ b/pages/activiteiten.html
@@ -10,14 +10,19 @@
              src="{% static '/static/images_activiteiten/DSC_100486.jpg' %}" />
     </div>
 
-    <h2>Activiteiten</h2>
-    <ul>
-        <li>-</li>
-    </ul>
+    <h2>Activiteiten en wedstrijden</h2>
 
-    <h2>Wedstrijden</h2>
+    <h3>2018</h3>
+
     <ul>
-        <li>-</li>
+        <li>14 januari, zondag 14:00 - Nieuwjaarsbijeenkomst
+        <li>22 januari, maandag 20:00 - Competitieavond
+        <li>5 februari, maandag 20:00 - Competitieavond
+        <li>19 februari, maandag 20:00 - Competitieavond
+        <li>24 maart, zaterdag 9:00 - Dag van het bestuur
+        <li>1 juli, zondag 13:00 - Koningsschieten (buitenveld)
+        <li>30 september, zondag 13:00 - Jaarafsluiting
+        <li>16 december, zondag 13:00 - Kerstverschieting
     </ul>
 
     <h2>Uitslagen en verslagen</h2>
