Update recurve cursus info.

--- a/pages/beginnerscursus.html
+++ b/pages/beginnerscursus.html
@@ -11,10 +11,9 @@
 
 <p class="textwidth">
     Geronimo verwelkomt graag aspirant leden. Bent u geïnteresseerd, dan
-    kunt u één van onze cursussen volgen.<br>
-    Na de cursus kunt u <a href="lidmaatschap.html">lid</a> worden om
-    verder te kunnen blijven schieten bij de club en mee te doen aan
-    activiteiten.
+    kunt u één van onze cursussen volgen. Na de cursus kunt u
+    <a href="lidmaatschap.html">lid</a> worden om verder te kunnen blijven
+    schieten bij de club en mee te doen aan activiteiten.
 </p>
 
 <hr>
@@ -54,8 +53,7 @@
 
 <p class="textwidth">
     Er zijn meerdere beginnerscursussen per jaar;
-    Die beginnen op de <strong>laatste vrijdag van september</strong>
-    of op de <strong>3e vrijdag van januari</strong>.
+    De eerste cursus van het jaar start op <strong>vrijdag 26 januari 2018</strong>.
 </p>
 
 <p class="textwidth">
@@ -69,7 +67,7 @@
 
 <p class="textwidth">
     De 10 lessen worden gegeven op de vrijdag (elke week, voor 10 weken) van
-    19.00 tot 20.00 uur, en van 20.15 tot 21.15 uur.<br>
+    20.30 tot 21.30 uur.<br>
     De lessen beginnen precies op de start tijd, graag willen we dan beginnen
     met de les, kom dus iets eerder om je boog alvast te pakken.
 </p>
