Update penningmeester in bestuur.

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,7 +18,7 @@
 
     <h2>Bestuursleden</h2>
 
-    <p style="font-style: italic;">Per 30 december, 2017</p>
+    <p style="font-style: italic;">Per 1 januari, 2018</p>
 
     <ul>
         <li>
@@ -41,7 +41,7 @@
             </ul>
         </li>
         <li>
-            <a id="email_penni" href="#">[vacature]</a> &ndash; penningmeester
+            <a id="email_penni" href="#">Wout van de Brug</a> &ndash; penningmeester
             <ul>
                 <li>Begroting</li>
                 <li>Financieel jaarverslag</li>
